[gd_scene load_steps=7 format=3 uid="uid://ti04y3oterqt"]

[ext_resource type="Script" path="res://Menus/menu_pause.gd" id="1_0ap0a"]
[ext_resource type="Theme" uid="uid://clj1h355k1bw1" path="res://Menus/pause_theme.tres" id="1_pitv0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o8ico"]

[sub_resource type="Animation" id="Animation_xvd0m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_color:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_enjaf"]
resource_name = "anim_pause"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_color:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0.5),
"transitions": PackedFloat32Array(0.176777, 1),
"update": 0,
"values": [Vector2(0, -980), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h5hh1"]
_data = {
"RESET": SubResource("Animation_xvd0m"),
"anim_pause": SubResource("Animation_enjaf")
}

[node name="Menu_pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0ap0a")

[node name="bg_color" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 4
color = Color(0.223529, 0.247059, 0.513726, 0.521569)

[node name="VBoxContainer" type="VBoxContainer" parent="bg_color"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -59.0
offset_right = 112.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_btn" type="Button" parent="bg_color/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_pitv0")
text = "RESUME
"

[node name="HSeparator3" type="HSeparator" parent="bg_color/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_o8ico")

[node name="restart_btn" type="Button" parent="bg_color/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_pitv0")
text = "RESTART	"

[node name="HSeparator" type="HSeparator" parent="bg_color/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_o8ico")

[node name="menu_btn" type="Button" parent="bg_color/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_pitv0")
text = "BACK TO MENU
"

[node name="HSeparator2" type="HSeparator" parent="bg_color/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_o8ico")

[node name="quit_bnt2" type="Button" parent="bg_color/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_pitv0")
text = "QUIT GAME
"

[node name="Anim_p" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h5hh1")
}

[connection signal="pressed" from="bg_color/VBoxContainer/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="bg_color/VBoxContainer/restart_btn" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="bg_color/VBoxContainer/menu_btn" to="." method="_on_menu_btn_pressed"]
[connection signal="pressed" from="bg_color/VBoxContainer/quit_bnt2" to="." method="_on_quit_bnt_2_pressed"]
[connection signal="animation_finished" from="Anim_p" to="." method="_on_anim_p_animation_finished"]
